@@ -1,3 +1,10 @@
+1999-09-12  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* NetAccess.cc, NetAccess.h: implement RateLimit class; use it.
+	* ftpclass.cc, Http.cc: use RateLimit.
+	* resource.cc: new resources net:limit-total-rate
+	  and net:limit-total-max.
+
 1999-09-10  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* Resolver.cc: recognize host names in the form proto,hostname and
